# Impacta-Health

./: README.md  dev-requirements  dev-requirements.txt  docker-compose.yaml  makefile  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
Docker/: Dockerfile.dev
appointments/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
appointments/migrations/: 0003_alter_appointment_options.py
appointments/static/css/: styleform.css
appointments/templates/appointments/: appointments.html  index.html  reschedule.html  schedule.html  searchQueries.html
impacta_health/: asgi.py  settings.py  urls.py  wsgi.py
logs/: config.py
project/: settings.py  urls.py
shared/static/css/: form.css
shared/templates/partials/: header.html
static/public/: index.html
tasks/: urls.py  views.py
tasks/static/css/: styleform.css
tasks/templates/tasks/: ConsultaExames.html  ImpactaHealth.html  ReagendarConsulta.html  index.html
users/: admin.py  enums.py  forms.py  managers.py  urls.py  views.py
users/models/: __init__.py  managers.py  user_model.py  users_model.py
users/static/css/: form.css  styles.css
users/static/js/: form-validation.js
users/templates/: login.html  patient_signup.html
users/validator/: custom username.py  custom_auth.py  custom_password.py  validate_cpf.py
users/validators/: username_validator.py
utils/: fixtures.json
